--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
         console.info(username);
         //判断当前浏览器是否支持WebSocket
         if ('WebSocket' in window) {
-            websocket = new WebSocket("ws://localhost:8180/websocket/"+username );
+            websocket = new WebSocket("ws://localhost:8180/websocket");
         } else {
             alert('当前浏览器 Not support websocket')
         }
